Fix bug on user-menu z-index, add article errors display to ArticleEdit, add ensure_logged_in to appropriate Articles controller actions on backend

--- a/app/assets/stylesheets/api/articles.scss
+++ b/app/assets/stylesheets/api/articles.scss
@@ -111,4 +111,13 @@ p.article_publish_date {
   color: rgba(0,0,0,.20);
   margin-bottom: 20px;
   letter-spacing: .05em;
+  display: inline-block;
+}
+
+.article_errors {
+  color: rgba(255,0,0,.80);
+  margin-bottom: 20px;
+  margin-left: 40px;
+  letter-spacing: .05em;
+  display: inline-block;
 }
