--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -68,6 +68,7 @@
   border-radius: 3px;
   background-color: white;
   box-shadow: 0px 1px 2px #ddd;
+  z-index: 5;
 }
 
 #user_menu a {
